--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,8 @@ dmypy.json
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+
+#############
+## PROJECT ##
+#############
+database.db
